#******************************************************************************
# (C) Copyright 2020-2022 Real-Time Innovations, Inc.  All rights reserved.
#
# The use of this software is governed by the terms specified in the 
# RTI Labs License Agreement, available at https://www.rti.com/terms/RTILabs. 
#
# By accessing, downloading, or otherwise using this software, you agree to 
# be bound by those terms.
#*****************************************************************************

cmake_minimum_required(VERSION 3.14)

add_subdirectory("base")
add_subdirectory("sensing")
add_subdirectory("physics")
add_subdirectory("perception")
add_subdirectory("planning")
add_subdirectory("actuation")
add_subdirectory("gateway")
add_subdirectory("demo")
